Model-as-a-judge 0.2.0: code criteria, typed input, conditional criteria (#5)
Judge:
- Add code criteria (JevJudge.Builder#check): deterministic checks that
  run before the Jev call and land in the same verdict and feedback.
  JevCriterion becomes a sealed interface over QuestionCriterion and
  CodeCriterion; criteria are validated however they are built.
- Add JevJudgeInput, a typed judged state with fixed fields
  (user_question, assistant_answer, expected_output, supporting_context,
  tool_calls), and JevJudge#judge(JevJudgeInput).
- Add conditional criteria: appliesWhen (skips the question), and
  whenChosen / whenPassed (resolved after the single call, so a
  branching rubric costs no extra request).
- Split undecided outcomes by cause: ERROR for a missing or unreadable
  answer, NOT_APPLICABLE for a criterion that did not apply; add
  failOnError and failFast.
- Decide score and choice pass/fail from the probability split, and gate
  minConfidence (default 0.5 -> 0.6) on the share supporting the verdict,
  so the two always agree.

Self-refine advisor:
- Add judgeErrorPolicy: fail open on transient judging failures
  (connection, timeout, 408, 429, 5xx), always rethrow client errors.
- Return the best attempt, not the last, once retries run out.
- Send tool results as tool_calls, paired with their calls by id or by
  tool name; skip returnDirect tool results.
- Add BEFORE_TOOLS_ORDER, where a retry re-runs the tools and each
  attempt's tool calls are recorded. The default order is unchanged.

Docs: add docs/changes.md with every breaking change and its migration;
correct the advisor and guardrail ordering docs for Spring AI 2.x.

Breaking changes (see docs/changes.md):
- JevCriterion is a sealed interface (source and binary incompatible).
- Outcome gains ERROR and NOT_APPLICABLE; a missing answer is ERROR.
- Pass/fail follows the probability split; minConfidence default 0.6.
- JevVerdict.response() and JevFinding.answer() may be null.
- Tool results move fro